# percept-android

./: .gitignore  README.md  gradle.properties  percept-android-implementation-plan.md  settings.gradle.kts
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/kotlin/org/takopi/percept/app/: CameraMicrophoneRig.kt  EnvironmentTrackers.kt  LocationTracker.kt  MainActivity.kt  MotionTracker.kt  OrientationTracker.kt  PerceptRecordingService.kt  PerceptRuntime.kt  PerceptSettings.kt  PerceptionRig.kt  SessionController.kt
app/src/main/res/values/: strings.xml
app/src/main/res/xml/: file_paths.xml
core/canonical/: build.gradle.kts
core/da/: build.gradle.kts
core/index/: build.gradle.kts
core/index/schemas/org.takopi.percept.core.index.EventPointerDatabase/: 1.json
core/trace/: build.gradle.kts
dispatch/: build.gradle.kts
docs/: on-device-yolo.md  querying.md  validation-report.md
gradle/: libs.versions.toml
perception/audio/: build.gradle.kts
perception/audio/src/main/cpp/: CMakeLists.txt  whisper_percept.cpp
perception/video/: build.gradle.kts
scripts/: recall.py  run_live_engine_harness.py  run_parity_harness.py  run_synthetic_m6_harness.py  verify_bundle.py
server/: compose.yaml
server/asr/: Dockerfile  app.py  compose.yaml  entrypoint.sh
server/browser/: Dockerfile  app.py  compose.yaml
server/ident/: Dockerfile  app.py  compose.yaml  entrypoint.sh
server/memory/: Dockerfile  ab.py  app.py  attribute.py  compose.yaml  enrich.py  identity.py  reason.py  vehicle.py
(+87 files in other folders)
